When trying to upload images around 8386 x 2229 pixels, getting overlapped with dash board menus issue resolved

--- a/web/css/viewBuzzSuccess.css
+++ b/web/css/viewBuzzSuccess.css
@@ -777,6 +777,7 @@ input[type="button"]{
 
 img.imgThumbnailView {
     border-radius: 5px;    
+    margin-left: 20px;
 }
 
 .closeFeed{
@@ -792,6 +793,12 @@ img.imgThumbnailView {
 #imageThumbnails{
     display:inline-block; 
     margin-top: 20px;
+    width: 640px;
+    overflow-x: auto;
+}
+
+.imageDefinition{
+    padding-top: 15px;
 }
 
 #imageThumbnails li{
